[gd_scene load_steps=3 format=3 uid="uid://cp6p3evs6p373"]

[ext_resource type="Script" path="res://Code/Game/Hitting/HitGoblinManager.gd" id="1_4eq42"]
[ext_resource type="PackedScene" uid="uid://dkour2dh7ebam" path="res://Code/Entities/goblin.tscn" id="2_oyi2p"]

[node name="HitGoblinManager" type="Node2D"]
script = ExtResource("1_4eq42")

[node name="GoblinR" parent="." instance=ExtResource("2_oyi2p")]
visible = false
position = Vector2(136.281, -57.742)
scale = Vector2(3.28125, 4.85484)
flip_h = true
_is_attacking_right = true

[node name="GoblinL" parent="." instance=ExtResource("2_oyi2p")]
visible = false
position = Vector2(-115.5, -57.4359)
scale = Vector2(3.28125, 4.85484)
_is_attacking_left = true

[node name="HitTimerLeft" type="Timer" parent="."]
one_shot = true

[node name="HitTimerRight" type="Timer" parent="."]
one_shot = true
